[gd_scene load_steps=45 format=3 uid="uid://cubvga5nekft1"]

[ext_resource type="Script" uid="uid://drabon3rq7gke" path="res://entities/characters/enemies/bomber_goblin/bomber_goblin.gd" id="1_45cv0"]
[ext_resource type="Shader" uid="uid://dfm6nh8rjqufc" path="res://resources/shaders/hurt.gdshader" id="2_m4j7p"]
[ext_resource type="Texture2D" uid="uid://b4sbljednrokm" path="res://assets/sprites/enemies/bomber_goblin/bomber_goblin_attack_6.png" id="3_dq42e"]
[ext_resource type="Texture2D" uid="uid://cr5dw36pur362" path="res://assets/sprites/enemies/bomber_goblin/bomber_goblin_death_6.png" id="4_08d8s"]
[ext_resource type="Texture2D" uid="uid://sxqq8u61vm13" path="res://assets/sprites/enemies/bomber_goblin/bomber_goblin_idle_4.png" id="5_kd1fj"]
[ext_resource type="PackedScene" uid="uid://dpxx7xj4o5ym" path="res://entities/utils/vision_detector/vision_detector.tscn" id="6_ovppl"]
[ext_resource type="PackedScene" uid="uid://bu7aogtp17wj4" path="res://entities/hud/exclamation/exclamation.tscn" id="7_mtim3"]
[ext_resource type="PackedScene" uid="uid://cv0axvo26akq4" path="res://entities/utils/body_detector/body_detector.tscn" id="8_3bvdd"]
[ext_resource type="PackedScene" uid="uid://d3wdau0mkkvja" path="res://entities/utils/knockback_component/knockback_component.tscn" id="9_kd1fj"]
[ext_resource type="PackedScene" uid="uid://dtw2oe6rya3fc" path="res://entities/utils/health_component/health_component.tscn" id="10_ovppl"]
[ext_resource type="PackedScene" uid="uid://w7y42hwt41uu" path="res://entities/controllers/movement_controller/movement_controller.tscn" id="11_mtim3"]
[ext_resource type="Script" uid="uid://dw3d2w1xljy02" path="res://resources/movement_module_data.gd" id="12_3bvdd"]
[ext_resource type="PackedScene" uid="uid://dd4ds2iiul82s" path="res://entities/utils/hitbox_component/hitbox_component.tscn" id="13_ovppl"]
[ext_resource type="PackedScene" uid="uid://cr0mcltrohvl4" path="res://entities/states/state_machine/state_machine.tscn" id="14_o6t8w"]
[ext_resource type="PackedScene" uid="uid://bkmjc0nx0fdee" path="res://entities/characters/enemies/states/idle/idle.tscn" id="15_0gn6k"]
[ext_resource type="PackedScene" uid="uid://bjbjgx8xbqx3c" path="res://entities/characters/enemies/states/death/death.tscn" id="16_vcd2s"]
[ext_resource type="PackedScene" uid="uid://4vbbkuihpjhv" path="res://entities/characters/enemies/states/attack/attack.tscn" id="17_gmkc0"]
[ext_resource type="PackedScene" uid="uid://bdhst7l51m64h" path="res://entities/controllers/audio_controller/audio_controller.tscn" id="18_xss6j"]
[ext_resource type="AudioStream" uid="uid://kqr5oqdwir8o" path="res://assets/sounds/sfx/enemies/goblin/goblin_yell.mp3" id="19_a8wte"]
[ext_resource type="AudioStream" uid="uid://d3c2kwtu86n35" path="res://assets/sounds/sfx/enemies/goblin/hurt.wav" id="20_pe5vs"]
[ext_resource type="AudioStream" uid="uid://3mge6v46kiyg" path="res://assets/sounds/sfx/enemies/goblin/die.wav" id="21_7mjdu"]
[ext_resource type="AudioStream" uid="uid://dgk1vaauyyh4k" path="res://assets/sounds/sfx/enemies/goblin/give_up.wav" id="22_0ammg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6t8w"]
shader = ExtResource("2_m4j7p")
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4528u"]
atlas = ExtResource("3_dq42e")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf46v"]
atlas = ExtResource("3_dq42e")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7eep"]
atlas = ExtResource("3_dq42e")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxsex"]
atlas = ExtResource("3_dq42e")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5an3"]
atlas = ExtResource("3_dq42e")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6t8w"]
atlas = ExtResource("3_dq42e")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gn6k"]
atlas = ExtResource("4_08d8s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcd2s"]
atlas = ExtResource("4_08d8s")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmkc0"]
atlas = ExtResource("4_08d8s")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xss6j"]
atlas = ExtResource("4_08d8s")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8wte"]
atlas = ExtResource("4_08d8s")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe5vs"]
atlas = ExtResource("4_08d8s")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjdu"]
atlas = ExtResource("5_kd1fj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ammg"]
atlas = ExtResource("5_kd1fj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frdtq"]
atlas = ExtResource("5_kd1fj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cmqj"]
atlas = ExtResource("5_kd1fj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1u14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4528u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf46v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7eep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxsex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5an3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6t8w")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gn6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcd2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmkc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xss6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8wte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe5vs")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ammg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frdtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cmqj")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jd5tn"]
size = Vector2(14, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_42wty"]
radius = 120.0

[sub_resource type="Resource" id="Resource_irnb0"]
script = ExtResource("12_3bvdd")
module = NodePath("../KnockbackComponent")
priority = 1
metadata/_custom_type_script = "uid://dw3d2w1xljy02"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtim3"]
size = Vector2(14, 16)

[node name="BomberGoblin" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 48
script = ExtResource("1_45cv0")
damage = 2
initial_direction = 1
cooldown = 1.5
health = 2

[node name="FlippedNode" type="Node2D" parent="."]

[node name="Animator" type="AnimatedSprite2D" parent="FlippedNode"]
material = SubResource("ShaderMaterial_o6t8w")
sprite_frames = SubResource("SpriteFrames_q1u14")
animation = &"attack"

[node name="VisionDetector" parent="FlippedNode" node_paths=PackedStringArray("vision_detector_shape", "vision_detector_line") instance=ExtResource("6_ovppl")]
visible = false
collision_mask = 17
vision_detector_shape = NodePath("VisionDetectorShape")
vision_detector_line = NodePath("VisionDetectorLine")

[node name="VisionDetectorShape" type="CollisionPolygon2D" parent="FlippedNode/VisionDetector"]
polygon = PackedVector2Array(0, -10, 117, -56, 117, 56, 0, 10, -10, 10, -10, -10)

[node name="VisionDetectorLine" type="RayCast2D" parent="FlippedNode/VisionDetector"]
target_position = Vector2(0, 0)
collision_mask = 49

[node name="Exclamation" parent="FlippedNode" instance=ExtResource("7_mtim3")]
visible = false
z_index = 2
position = Vector2(6, -13)
scale = Vector2(0.75, 0.75)
frame = 1
frame_progress = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_jd5tn")

[node name="PlayerDetector" parent="." node_paths=PackedStringArray("detector_shape", "vision_detector") instance=ExtResource("8_3bvdd")]
visible = false
collision_layer = 0
detector_shape = NodePath("DetectorShape")
vision_detector = NodePath("../FlippedNode/VisionDetector")
detect_groups = Array[String](["Player"])
detector_distance = 120

[node name="DetectorShape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_42wty")

[node name="KnockbackComponent" parent="." instance=ExtResource("9_kd1fj")]

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("10_ovppl")]
parent = NodePath("..")

[node name="MovementController" parent="." instance=ExtResource("11_mtim3")]
movement_modules_data = Array[ExtResource("12_3bvdd")]([SubResource("Resource_irnb0")])

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "knockback_component") instance=ExtResource("13_ovppl")]
visible = false
collision_layer = 4
collision_mask = 66
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="HitboxComponentShape" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_mtim3")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("14_o6t8w")]
initial_state = NodePath("Idle")

[node name="Idle" parent="StateMachine" node_paths=PackedStringArray("enemy") instance=ExtResource("15_0gn6k")]
enemy = NodePath("../..")

[node name="Death" parent="StateMachine" node_paths=PackedStringArray("enemy") instance=ExtResource("16_vcd2s")]
enemy = NodePath("../..")

[node name="Attack" parent="StateMachine" node_paths=PackedStringArray("enemy") instance=ExtResource("17_gmkc0")]
enemy = NodePath("../..")

[node name="AudioController" parent="." instance=ExtResource("18_xss6j")]

[node name="Yell" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("19_a8wte")
max_distance = 250.0
bus = &"SFX"

[node name="Hurt" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("20_pe5vs")
volume_db = 10.0
max_distance = 250.0
bus = &"SFX"

[node name="Die" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("21_7mjdu")
volume_db = 3.0
max_distance = 250.0
bus = &"SFX"

[node name="GiveUp" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("22_0ammg")
volume_db = 3.0
max_distance = 250.0
bus = &"SFX"

[node name="GiveUpCountdown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="FlippedNode/Animator" to="." method="_on_animator_animation_finished"]
[connection signal="frame_changed" from="FlippedNode/Animator" to="." method="_on_animator_frame_changed"]
[connection signal="body_entered" from="FlippedNode/VisionDetector" to="FlippedNode/VisionDetector" method="_on_body_entered"]
[connection signal="timeout" from="GiveUpCountdown" to="." method="_on_give_up_countdown_timeout"]
